Paragraph element is added

--- a/secondFile.html
+++ b/secondFile.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h2>Welcome to Git</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel numquam possimus provident, quam voluptas eos aspernatur iste eaque amet, debitis consequatur obcaecati dolore. Qui ea voluptatibus magnam laboriosam exercitationem itaque esse odio modi, veniam, quasi adipisci impedit sit perspiciatis quibusdam labore nesciunt eligendi blanditiis id, ipsa natus perferendis optio. Quae commodi aut nesciunt odit unde, ea obcaecati quis omnis quo laborum doloribus, rem vitae beatae nulla officiis modi? Consequuntur ab autem delectus harum, corporis praesentium et expedita totam? Aliquid molestiae et non dicta quaerat sequi magnam eveniet est libero, nobis dolorem ut. Nam doloribus ducimus molestias ratione odit ipsa obcaecati.</p>
 </body>
 </html>
